[tool.poetry]
name = "route-graph"
version = "0.2.1"
description = "Tool for creating graphs of routes"
authors = ["Fabian Affolter <mail@fabian-affolter.ch>"]
readme = "README.md"
license = "MIT"
keywords = ["traceroute", "graph", "routes"]
homepage = "https://github.com/audius/route-graph"
repository = "https://github.com/audius/route-graph"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
scapy = "^2.5.0"
typing-extensions = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
isort = "^5.13"

[tool.poetry.scripts]
route-graph = "route_graph.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
